--- a/iDProj/Base.lproj/Main.storyboard
+++ b/iDProj/Base.lproj/Main.storyboard
@@ -3,6 +3,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -170,7 +172,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Anmelden" rowHeight="26" id="dua-3u-dsY">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="Idee einreichen" rowHeight="26" id="dua-3u-dsY">
                                 <rect key="frame" x="0.0" y="72" width="320" height="26"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dua-3u-dsY" id="XiT-UO-rga">
@@ -178,10 +180,10 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="3IL-EN-hee" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="81A-b7-781"/>
+                                    <segue destination="yMU-Hp-1xB" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="xgy-sy-glD"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Ideen" rowHeight="49" id="v19-Yy-jzJ">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="Meine Ideen" rowHeight="49" id="v19-Yy-jzJ">
                                 <rect key="frame" x="0.0" y="98" width="320" height="49"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="v19-Yy-jzJ" id="QfK-iU-xk1">
@@ -192,7 +194,7 @@
                                     <segue destination="Rxa-7V-7Xd" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="CIR-Ot-MuV"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Test" rowHeight="49" id="JVd-b5-CeB">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="Logout" rowHeight="49" id="JVd-b5-CeB">
                                 <rect key="frame" x="0.0" y="147" width="320" height="49"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JVd-b5-CeB" id="pCe-ck-AGM">
@@ -226,30 +228,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gYl-6H-lRv">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gYl-6H-lRv">
                                 <rect key="frame" x="0.0" y="61" width="320" height="507"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IYa-tn-yKt">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IYa-tn-yKt">
                                 <rect key="frame" x="62" y="32" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aF7-L2-yY3">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aF7-L2-yY3">
                                 <rect key="frame" x="16" y="28" width="46" height="30"/>
                                 <state key="normal" title="Button"/>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A63-De-19N">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A63-De-19N">
                                 <rect key="frame" x="137" y="28" width="46" height="30"/>
                                 <state key="normal" title="Button"/>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="12o-Pu-LWF">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="12o-Pu-LWF">
                                 <rect key="frame" x="266" y="28" width="46" height="30"/>
                                 <state key="normal" title="Button"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="aF7-L2-yY3" firstAttribute="baseline" secondItem="IYa-tn-yKt" secondAttribute="firstBaseline" id="8DP-O4-w0a"/>
+                            <constraint firstItem="aF7-L2-yY3" firstAttribute="top" secondItem="Tl8-Hh-EhU" secondAttribute="bottom" constant="8" symbolic="YES" id="BGd-an-mYS"/>
+                            <constraint firstItem="12o-Pu-LWF" firstAttribute="leading" secondItem="A63-De-19N" secondAttribute="trailing" constant="83" id="EGW-9H-dXa"/>
+                            <constraint firstItem="gYl-6H-lRv" firstAttribute="bottom" secondItem="8ym-d0-DyY" secondAttribute="top" id="FnL-8D-9Yn"/>
+                            <constraint firstItem="aF7-L2-yY3" firstAttribute="trailing" secondItem="IYa-tn-yKt" secondAttribute="trailing" id="Q0a-Mm-NxB"/>
+                            <constraint firstItem="gYl-6H-lRv" firstAttribute="top" secondItem="aF7-L2-yY3" secondAttribute="bottom" constant="3" id="TZK-Zk-o8W"/>
+                            <constraint firstAttribute="trailing" secondItem="gYl-6H-lRv" secondAttribute="trailing" id="Wn5-2Q-dz7"/>
+                            <constraint firstItem="A63-De-19N" firstAttribute="baseline" secondItem="12o-Pu-LWF" secondAttribute="baseline" id="dBB-jg-zf7"/>
+                            <constraint firstItem="aF7-L2-yY3" firstAttribute="leading" secondItem="UPg-F4-Bh8" secondAttribute="leadingMargin" id="dOv-tb-GbR"/>
+                            <constraint firstItem="gYl-6H-lRv" firstAttribute="leading" secondItem="UPg-F4-Bh8" secondAttribute="leading" id="hKy-oB-eVF"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="12o-Pu-LWF" secondAttribute="trailing" constant="-12" id="iEV-Ji-AK7"/>
+                            <constraint firstItem="aF7-L2-yY3" firstAttribute="baseline" secondItem="A63-De-19N" secondAttribute="baseline" id="ieT-11-7JB"/>
+                            <constraint firstItem="gYl-6H-lRv" firstAttribute="centerX" secondItem="A63-De-19N" secondAttribute="centerX" id="rL7-Nd-5uD"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1xU-9d-2AW" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -262,7 +279,6 @@
         <image name="Logo.png" width="320" height="134"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="81A-b7-781"/>
-        <segue reference="zBa-Ze-ESh"/>
+        <segue reference="xgy-sy-glD"/>
     </inferredMetricsTieBreakers>
 </document>
