--- a/iDProj/Base.lproj/Main.storyboard
+++ b/iDProj/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="k00-G3-4XK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D13b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="k00-G3-4XK">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -123,7 +123,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <segue destination="yMU-Hp-1xB" kind="push" id="3hU-5W-Fyb"/>
+                                    <action selector="Login:" destination="3IL-EN-hee" eventType="touchUpInside" id="M8f-Q4-YFy"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="BhX-Aj-qX9">
@@ -133,6 +133,12 @@
                                     <constraint firstAttribute="height" constant="54" id="CW8-41-00K"/>
                                 </constraints>
                             </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nuK-xs-0Oh">
+                                <rect key="frame" x="85" y="162" width="150" height="81"/>
+                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -151,6 +157,12 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="wTQ-eL-YK1"/>
+                    <connections>
+                        <outlet property="ErrorText" destination="nuK-xs-0Oh" id="igR-1M-9hG"/>
+                        <outlet property="Password" destination="q63-bi-kM2" id="Pkm-VS-fiw"/>
+                        <outlet property="UserName" destination="AAL-rN-cof" id="wdo-Ss-YMt"/>
+                        <segue destination="yMU-Hp-1xB" kind="push" identifier="showTable" id="bH4-3v-0Q9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CUa-Sl-nKh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -279,6 +291,6 @@
         <image name="Logo.png" width="320" height="134"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="xgy-sy-glD"/>
+        <segue reference="bH4-3v-0Q9"/>
     </inferredMetricsTieBreakers>
 </document>
