--- a/iDProj/Base.lproj/LaunchScreen.storyboard
+++ b/iDProj/Base.lproj/LaunchScreen.storyboard
@@ -17,15 +17,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="iD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mMx-tC-Uqh">
-                                <rect key="frame" x="145" y="184" width="83" height="39"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="41"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo_iD_plain.png" translatesAutoresizingMaskIntoConstraints="NO" id="C0B-y8-E5V">
+                                <rect key="frame" x="47" y="208" width="320" height="320"/>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.26562936090219003" blue="0.18945864729217521" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.93363381412564106" green="0.93363381412564106" blue="0.93363381412564106" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="C0B-y8-E5V" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="2tk-E1-6ys"/>
+                            <constraint firstItem="C0B-y8-E5V" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="cD8-kj-eHG"/>
+                        </constraints>
                     </view>
+                    <nil key="simulatedStatusBarMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -33,4 +35,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Logo_iD_plain.png" width="320" height="320"/>
+    </resources>
 </document>
